force-app/main/default/objects/ProductTeamMember__c/ProductTeamMember__c.object-meta.xml
<CustomObject>
    <label>Product Team Member</label>
    <nameField>
        <displayFormat>Member-{000000}</displayFormat>
        <label>PTM Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Product Team Members</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>