force-app/main/default/objects/ProductTeamMember__c/fields/PermissionSet__c.field-meta.xml
<CustomField>
    <fullName>PermissionSet__c</fullName>
    <label>Permission Set</label>
    <length>255</length>
    <type>Text</type>
</CustomField>