force-app/main/default/objects/ProductTeamMember__c/fields/Product__c.field-meta.xml
<CustomField>
    <fullName>Product__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Product</label>
    <referenceTo>Product2</referenceTo>
    <relationshipLabel>Product Team Members</relationshipLabel>
    <relationshipName>Product_Team_Members</relationshipName>
    <type>Lookup</type>
</CustomField>