force-app/main/default/objects/ProductTeamMember__c/fields/ProductAccessLevel__c.field-meta.xml
<CustomField>
    <fullName>ProductAccessLevel__c</fullName>
    <label>Product Access Level</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Read</fullName>
                <default>true</default>
                <label>Read</label>
            </value>
            <value>
                <fullName>Edit</fullName>
            </value>
            <value>
                <fullName>Full Access</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>