force-app/main/default/objects/ProductTeamMember__c/fields/PublicGroup__c.field-meta.xml
<CustomField>
    <fullName>PublicGroup__c</fullName>
    <label>Public Group</label>
    <length>255</length>
    <type>Text</type>
</CustomField>