force-app/main/default/objects/ProductTeamMember__c/fields/TeamMemberRole__c.field-meta.xml
<CustomField>
    <fullName>TeamMemberRole__c</fullName>
    <label>Team Member Role</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Marketing Agent</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>